# mor-steg-cli

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  THIRD_PARTY_NOTICES.md  checklist.txt  flake.nix  mor-steg-fix-bubblewrap-packaging.sh
docs/: RELEASE_NOTES_v0.2.0.md  SECURE_RELEASE_CHECKLIST.md
packaging/arch/: mor-steg-sandboxed  mor-steg-sandboxed.desktop  mor-steg.desktop
scripts/: release-local.sh
src/: app.rs  cloud.rs  crypto.rs  deps.rs  main.rs  paths.rs  steg.rs  ui.rs
src/flows/: age_keys.rs  checks.rs  cloud_safe.rs  inspect.rs  mod.rs  password.rs  save_locations.rs
